@@ -237,36 +237,46 @@
 	/**
 	 * Rearrange widgets on drag operation.
 	 *
-	 * @param {array}  widgets  Array of widget objects.
-	 * @param {object} widget   Moved widget object.
+	 * @param {array}  widgets   Array of widget objects.
+	 * @param {object} widget    Moved widget object.
+	 * @param {number} max_rows
+	 *
+	 * @returns {boolean}
 	 */
-	function realignWidget(widgets, widget) {
-		var realign = function(widgets, widget, allow_reorder) {
-			var next = [];
+	function realignWidget(widgets, widget, max_rows) {
+		var overflow = false,
+			realign = function(widgets, widget, allow_reorder) {
+				var next = [];
 
-			widgets.forEach(function(w) {
-				if (widget.uniqueid !== w.uniqueid) {
-					if (rectOverlap(widget.current_pos, w.current_pos)
-						|| (!allow_reorder && 'affected_by_id' in w && w.affected_by_id === widget.uniqueid)
-					) {
-						w.current_pos.y = Math.max(w.current_pos.y, widget.current_pos.y + widget.current_pos.height);
-						next.push(w);
+				widgets.forEach(function(w) {
+					if (widget.uniqueid !== w.uniqueid && !overflow) {
+						if (rectOverlap(widget.current_pos, w.current_pos)
+								|| (!allow_reorder && 'affected_by_id' in w && w.affected_by_id === widget.uniqueid)) {
+							w.current_pos.y = Math.max(w.current_pos.y,
+								widget.current_pos.y + widget.current_pos.height
+							);
+							next.push(w);
+							overflow = (overflow || (w.current_pos.y + w.current_pos.height) > max_rows);
+						}
 					}
-				}
-			});
+				});
 
-			next.forEach(function(widget) {
-				realign(widgets, widget, false);
-			});
-		}
+				next.forEach(function(widget) {
+					if (!overflow) {
+						realign(widgets, widget, false);
+					}
+				});
+			};
 
 		widgets.each(function(w) {
-			if (widget.uniqueid !== w.uniqueid) {
+			if (widget.uniqueid !== w.uniqueid && !overflow) {
 				w.current_pos = $.extend({}, w.pos);
 			}
 		});
 
 		realign(sortWidgets(widgets), widget, true);
+
+		return overflow;
 	}
 
 	function sortWidgets(widgets, by_current) {
@@ -772,7 +782,7 @@
 	/**
 	 * User action handler for resize of widget.
 	 *
-	 * @param {object} $obj  Dasboard DOM element.
+	 * @param {object} $obj  Dashboard DOM element.
 	 * @param {object} $div  Widget DOM element.
 	 * @param {object} data  Dashboard data object.
 	 */
@@ -811,31 +821,47 @@
 	function doWidgetPositioning($obj, $div, data) {
 		var	widget = getWidgetByTarget(data['widgets'], $div),
 			pos = getDivPosition($obj, data, $div),
-			rows = 0;
+			rows = 0,
+			overflow = false;
 
-		setDivPosition(data['placeholder'], data, pos);
+		if (!posEquals(pos, widget.current_pos)) {
+			widget.current_pos = pos;
+			overflow = realignWidget(data['widgets'], widget, data.options['max-rows']);
 
-		if (!posEquals(pos, widget['current_pos'])) {
-			widget['current_pos'] = pos;
-			realignWidget(data['widgets'], widget);
+			if (overflow) {
+				// restore last non-overflow position
+				data.widgets.each(function(w) {
+					w.current_pos = $.extend({}, data.undo_pos[w.uniqueid]);
+				});
+				pos = widget.current_pos;
+			}
+			else {
+				// store all widget current_pos objects
+				data.undo_pos = {};
+				data.widgets.each(function(w) {
+					data.undo_pos[w.uniqueid] = $.extend({}, w.current_pos);
+				});
 
-			data['widgets'].forEach(function(w) {
-				if (widget.uniqueid !== w.uniqueid) {
-					setDivPosition(w['div'], data, w['current_pos']);
+				data['widgets'].forEach(function(w) {
+					if (widget.uniqueid !== w.uniqueid) {
+						setDivPosition(w['div'], data, w.current_pos);
+					}
+
+					rows = Math.max(rows, w.current_pos.y + w.current_pos.height);
+				});
+
+				if (rows > data.options['rows']) {
+					data.options['rows_actual'] = rows;
+					resizeDashboardGrid($obj, data, rows);
 				}
-
-				rows = Math.max(rows, w['current_pos'].y + w['current_pos'].height);
-			});
-
-			if (rows > data['options']['rows']) {
-				data['options']['rows_actual'] = rows;
-				resizeDashboardGrid($obj, data, rows);
 			}
 		}
+
+		setDivPosition(data['placeholder'], data, pos);
 	}
 
 	function stopWidgetPositioning($obj, $div, data) {
-		var	widget = getWidgetByTarget(data['widgets'], $div);
+		var widget = getWidgetByTarget(data['widgets'], $div);
 
 		data['placeholder'].hide();
 		data['pos-action'] = '';
@@ -889,6 +915,10 @@
 				startWidgetPositioning(ui.helper, data, 'drag');
 
 				widget.current_pos = $.extend({}, widget.pos);
+				data.undo_pos = {};
+				data.widgets.each(function(w) {
+					data.undo_pos[w.uniqueid] = $.extend({}, w.current_pos);
+				});
 			},
 			drag: function(event, ui) {
 				// Limit element draggable area for X and Y axis.
@@ -901,6 +931,7 @@
 			},
 			stop: function(event, ui) {
 				delete data.calculated;
+				delete data.undo_pos;
 
 				data.widgets = sortWidgets(data.widgets).each(function(widget) {
 					delete widget.affected_by_draggable;
@@ -974,7 +1005,7 @@
 				$div.css({
 					top: ui.position.top,
 					left: ui.position.left,
-					height: ui.size.height,
+					height: Math.min(ui.size.height, data.options['widget-max-rows'] * data.options['widget-height']),
 					width: Math.min(ui.size.width,
 						data['cell-width'] * data['options']['max-columns'] - ui.position.left
 					)
